--- a/Rovema.Api/appsettings.json
+++ b/Rovema.Api/appsettings.json
@@ -1,7 +1,6 @@
 {
   "Environment": {
-    "OPENWEATHER_URL": "http://api.openweathermap.org",
-    "OPENWEATHER_API_KEY": "a013551481b6e964e0751cb935481aa2",
+    "OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
     "DIRECTUS_URL": "https://rovema.dclt.com.br",
     "DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
     "SHOW_SWAGGER": "false",
