--- a/Rovema.Coravel/Rovema.Coravel.csproj
+++ b/Rovema.Coravel/Rovema.Coravel.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Coravel.Pro" Version="5.2.3" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.5" />
