--- a/Rovema.Shared/Rovema.Shared.csproj
+++ b/Rovema.Shared/Rovema.Shared.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dclt.Shared" Version="1.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Dclt.Shared\Dclt.Shared.csproj" />
   </ItemGroup>
 
 </Project>
