--- a/Rovema.Shared/Rovema.Shared.csproj
+++ b/Rovema.Shared/Rovema.Shared.csproj
@@ -7,12 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Dclt.Shared" Version="1.0.18" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Shared\Dclt.Shared\Dclt.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
