--- a/Rovema.Api/appsettings.Development.json
+++ b/Rovema.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Environment": {
     "SHOW_SWAGGER": "true",
-    "REDIS_URL": "localhost:6379"
+    "REDIS_URL": "localhost:6379,password=Mpro2024_Empro"
   },
   "Logging": {
     "LogLevel": {
