--- a/Rovema.Api/appsettings.json
+++ b/Rovema.Api/appsettings.json
@@ -3,7 +3,7 @@
     "OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
     "DIRECTUS_URL": "https://rovema.dclt.com.br",
     "DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
-    "SHOW_SWAGGER": "false",
+    "SHOW_SWAGGER": "true",
     "REDIS_URL": "redis:6379"
   },
   "Logging": {
