--- a/Rovema.Coravel/appsettings.Development.json
+++ b/Rovema.Coravel/appsettings.Development.json
@@ -7,7 +7,8 @@
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
+      "Rovema.Coravel": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
