--- a/Rovema.Coravel/appsettings.Development.json
+++ b/Rovema.Coravel/appsettings.Development.json
@@ -1,14 +1,13 @@
 {
   "Environment": {
     "ROVEMA_SQLITE": "Data Source=coraveldev.db",
-    "ROVEMAAPI_URL": "https://localhost:4101"
+    "ROVEMAAPI_URL2": "https://localhost:4101"
   },
 
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Error",
-      "Rovema.Coravel": "Information",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
