--- a/Rovema.Api/appsettings.Development.json
+++ b/Rovema.Api/appsettings.Development.json
@@ -5,7 +5,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft.AspNetCore": "Warning"
     }
   }
