--- a/Rovema.Api/appsettings.json
+++ b/Rovema.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft.AspNetCore": "Warning"
     }
   },
