--- a/Rovema.Coravel/appsettings.json
+++ b/Rovema.Coravel/appsettings.json
@@ -1,12 +1,17 @@
 {
   "Environment": {
     "ROVEMA_SQLITE": "Data Source=coravel.db",
-    "ROVEMAAPI_URL": "https://rovemaapi.dclt.com.br"
+    "ROVEMAAPI_URL": "https://rovemaapi.dclt.com.br",
+    //"OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
+    //"DIRECTUS_URL": "https://rovema.dclt.com.br",
+    //"DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
+    "SHOW_SWAGGER": "true",
+    "REDIS_URL": "redis:6379"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Error",
+      "Rovema.Coravel": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
