--- a/Rovema.Coravel/appsettings.json
+++ b/Rovema.Coravel/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Environment": {
     "ROVEMA_SQLITE": "Data Source=coravel.db",
+
+    "DIRECTUS_URL": "https://rovema.dclt.com.br",
+    "DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
+
+    "OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
+
     "ROVEMAAPI_URL": "https://rovemaapi.dclt.com.br",
-    //"OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
-    //"DIRECTUS_URL": "https://rovema.dclt.com.br",
-    //"DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
     "SHOW_SWAGGER": "true",
     "REDIS_URL": "redis:6379"
   },
