--- a/Rovema.App/Rovema.App.csproj
+++ b/Rovema.App/Rovema.App.csproj
@@ -12,14 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dclt.Directus" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.20.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Dclt.Directus\Dclt.Directus.csproj" />
   </ItemGroup>
 
   <ItemGroup>
