--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -12,4 +12,5 @@ RUN dotnet publish Rovema.App.csproj -c Release -o /app/publish
 FROM nginx:alpine AS final
 WORKDIR /usr/share/nginx/html
 COPY --from=publish /app/publish/wwwroot .
+WORKDIR /src
 COPY nginx.conf /etc/nginx/nginx.conf
