--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -1,6 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY Rovema.App.csproj .
+COPY nginx.conf .
 RUN dotnet restore Rovema.App.csproj
 
 COPY . .
@@ -11,6 +12,5 @@ RUN dotnet publish Rovema.App.csproj -c Release -o /app/publish
 
 FROM nginx:alpine AS final
 WORKDIR /usr/share/nginx/html
-COPY --from=publish /app/publish/wwwroot .
-WORKDIR /src
+COPY --from=build /app/publish/wwwroot .
 COPY nginx.conf /etc/nginx/nginx.conf
