--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -1,7 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+EXPOSE 8080
 WORKDIR /src
 COPY Rovema.App.csproj .
-COPY nginx.conf .
 RUN dotnet restore Rovema.App.csproj
 
 COPY . .
@@ -12,5 +12,5 @@ RUN dotnet publish Rovema.App.csproj -c Release -o /app/publish
 
 FROM nginx:alpine AS final
 WORKDIR /usr/share/nginx/html
-COPY --from=build /app/publish/wwwroot .
+COPY --from=publish /app/publish/wwwroot .
 COPY nginx.conf /etc/nginx/nginx.conf
