--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,30 @@
-﻿events {}
-http {
-	include /etc/nginx/mime.types;
-	server {
-		listen 8080;
-		server_name localhost;
-	    root /usr/share/nginx/html;
-		index index.html;
-		location / {
-			try_files $uri $uri/ /index.html
-		}
-	}
+﻿server {
+    listen 8080;
+
+    server_name localhost;
+
+    # Diretório raiz onde os arquivos da aplicação Blazor serão servidos
+    root /usr/share/nginx/html;
+
+    # Tenta servir o arquivo solicitado, se não for encontrado, redireciona para index.html
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Configurações de cache para arquivos estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+        expires 1y;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    }
+
+    # Configurações de cache para outros tipos de arquivos
+    location ~* \.(manifest|appcache|html|xml|json)$ {
+        expires -1;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+    }
+
+    # Gzip configuração para otimizar a entrega de arquivos
+    gzip on;
+    gzip_types text/plain application/xml text/css application/javascript application/x-javascript;
+    gzip_min_length 256;
 }
