--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,50 @@
-﻿http {
-	include /etc/nginx/mime.types;
-	server {
-		listen 8080;
-		server_name localhost;
-	    root /usr/share/nginx/html;
-		index index.html;
-		location / {
-			try_files $uri $uri/ /index.html
-		}
-	}
+﻿server {
+        listen 8080;
+        listen [::]:8080;
+
+        server_name localhost;
+
+        location / {
+                root /usr/share/nginx/html;
+                try_files $uri $uri/ index.html =404;
+
+                include /etc/nginx/mime.types;
+                types {
+                        application/wasm wasm;
+                }
+                default_type application/octet-stream;
+        }
+
+        location /service1/ {
+                proxy_pass http://localhost:5001/;
+                proxy_http_version 1.1;
+                proxy_set_header   Upgrade $http_upgrade;
+                proxy_set_header   Connection keep-alive;
+                proxy_set_header   Host $host;
+                proxy_cache_bypass $http_upgrade;
+                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header   X-Forwarded-Proto $scheme;
+        }
+
+        location /service2/ {
+                proxy_pass http://localhost:5002/;
+                proxy_http_version 1.1;
+                proxy_set_header   Upgrade $http_upgrade;
+                proxy_set_header   Connection keep-alive;
+                proxy_set_header   Host $host;
+                proxy_cache_bypass $http_upgrade;
+                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header   X-Forwarded-Proto $scheme;
+        }
+
+        location /service3/ {
+                proxy_pass http://localhost:5003/;
+                proxy_http_version 1.1;
+                proxy_set_header   Upgrade $http_upgrade;
+                proxy_set_header   Connection keep-alive;
+                proxy_set_header   Host $host;
+                proxy_cache_bypass $http_upgrade;
+                proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header   X-Forwarded-Proto $scheme;
+        }
 }
