--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -5,7 +5,7 @@ COPY Rovema.App/Rovema.App.csproj ./Rovema.App/
 RUN dotnet restore Rovema.App/Rovema.App.csproj
 
 COPY . .
-WORKDIR /app/Rovema.App"
+WORKDIR /app/Rovema.App
 RUN dotnet build "./Rovema.App.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "./Rovema.App.csproj" -c Release -o /app/publish
