--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -12,7 +12,7 @@ RUN dotnet publish "./Rovema.App.csproj" -c Release -o /app/publish
 
 WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 
 FROM nginx:alpine
 WORKDIR /app
