--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -1,20 +1,18 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /app
+WORKDIR /src
 
-COPY Rovema.App/Rovema.App.csproj ./Rovema.App/
-RUN dotnet restore Rovema.App/Rovema.App.csproj
+COPY ["Rovema.App/Rovema.App.csproj", "Rovema.App/"]
+RUN dotnet restore "./Rovema.App/Rovema.App.csproj"
 
 COPY . .
-WORKDIR /app/Rovema.App
+WORKDIR /src/Rovema.App
 RUN dotnet build "./Rovema.App.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "./Rovema.App.csproj" -c Release -o /app/publish
 
+FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=build /app/publish/wwwroot .
-
-FROM nginx:alpine
-WORKDIR /app
 COPY Rovema.App/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 8080 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
