--- a/Rovema.App/Dockerfile
+++ b/Rovema.App/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-COPY ["Rovema.App/Rovema.App.csproj", "Rovema.App/"]
+COPY ["Rovema.App.csproj", "Rovema.App/"]
 RUN dotnet restore "./Rovema.App/Rovema.App.csproj"
 
 COPY . .
@@ -13,6 +13,6 @@ RUN dotnet publish "./Rovema.App.csproj" -c Release -o /app/publish
 FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=build /app/publish/wwwroot .
-COPY Rovema.App/nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 8080 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
