--- a/Rovema.Coravel/appsettings.json
+++ b/Rovema.Coravel/appsettings.json
@@ -2,8 +2,8 @@
   "Environment": {
     "ROVEMA_SQLITE": "Data Source=coravel.db",
 
-    "DIRECTUS_URL": "https://rovema.dclt.com.br",
-    "DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
+    "DIRECTUS_URL": "https://pme.dclt.com.br",
+    "DIRECTUS_TOKEN": "t-FdgNmL1halTNeWwOISgvkl35Y94QjX",
 
     "OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
 
