--- a/Rovema.Api/appsettings.json
+++ b/Rovema.Api/appsettings.json
@@ -1,10 +1,8 @@
 {
   "Environment": {
-    "OPENWEATHER_KEY": "a013551481b6e964e0751cb935481aa2",
-    "DIRECTUS_URL": "https://rovema.dclt.com.br",
-    "DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe",
-    "SHOW_SWAGGER": "true",
-    "REDIS_URL": "redis:6379"
+    "DIRECTUS_URL": "https://pme.dclt.com.br",
+    "DIRECTUS_TOKEN": "t-FdgNmL1halTNeWwOISgvkl35Y94QjX",
+    "SHOW_SWAGGER": "true"
   },
   "Logging": {
     "LogLevel": {
