publish pme api

--- a/Rovema.Shared/Rovema.Shared.csproj
+++ b/Rovema.Shared/Rovema.Shared.csproj
@@ -7,15 +7,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Dclt.Directus" Version="1.1.3" />
+		<PackageReference Include="Dclt.Services" Version="1.1.3" />
+		<PackageReference Include="Dclt.Shared" Version="1.1.3" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
 		<PackageReference Include="Microsoft.Playwright" Version="1.44.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Shared\Dclt.Directus\Dclt.Directus.csproj" />
-	  <ProjectReference Include="..\..\Shared\Dclt.Services\Dclt.Services.csproj" />
-	  <ProjectReference Include="..\..\Shared\Dclt.Shared\Dclt.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
