--- a/Rovema.App/wwwroot/appsettings.json
+++ b/Rovema.App/wwwroot/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Environment": {
-    "DIRECTUS_URL": "https://rovema.dclt.com.br"
-    //"DIRECTUS_TOKEN": "8SyRFwK5bcl1WPPIpOjJS7nprTSNfXUe"
+    "DIRECTUS_URL": "https://pme.dclt.com.br",
+    "DIRECTUS_TOKEN": "t-FdgNmL1halTNeWwOISgvkl35Y94QjX"
   },
   "Logging": {
     "LogLevel": {
