--- a/Rovema.App/Rovema.App.csproj
+++ b/Rovema.App/Rovema.App.csproj
@@ -12,11 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dclt.Directus" Version="1.1.2" />
+    <PackageReference Include="Dclt.Directus" Version="1.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.6" PrivateAssets="all" />
-    <PackageReference Include="MudBlazor" Version="6.20.0" />
+    <PackageReference Include="MudBlazor" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Rovema.Shared\Rovema.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
